# cmake-example-project

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/include/: module.h
app/src/: module.cpp
scripts/: build.fish  run.fish  test.fish
tests/: CMakeLists.txt
tests/src/: test_module.cpp
